// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export * as ns from 'mod';
export v from 'mod';
export a, * as b from 'mod';
export c, { foo } from 'mod';
export * as d from 'mod';
export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
export Bar from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
export { foooooooooooooooooooooooooooooooooooooooooooooo, fooooooooooooooooooooooooooooooooooooooooooooooo  } from "fooooooooooooooooooooooooooooo";

=====================================output=====================================
export * as ns from "mod";
export v from "mod";
export a, * as b from "mod";
export c, { foo } from "mod";
export * as d from "mod";
export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
export Bar from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
export {
  foooooooooooooooooooooooooooooooooooooooooooooo,
  fooooooooooooooooooooooooooooooooooooooooooooooo,
} from "fooooooooooooooooooooooooooooo";

================================================================================
`;

exports[`export.js format[acorn] 1`] = `
"Unexpected token (2:8)
  1 | export * as ns from 'mod';
> 2 | export v from 'mod';
    |        ^
  3 | export a, * as b from 'mod';
  4 | export c, { foo } from 'mod';
  5 | export * as d from 'mod';
Cause: Unexpected token (2:7)"
`;

exports[`export.js format[espree] 1`] = `
"Unexpected token v (2:8)
  1 | export * as ns from 'mod';
> 2 | export v from 'mod';
    |        ^
  3 | export a, * as b from 'mod';
  4 | export c, { foo } from 'mod';
  5 | export * as d from 'mod';
Cause: Unexpected token v"
`;

exports[`export.js format[meriyah] 1`] = `
"Unexpected token: 'identifier' (2:8)
  1 | export * as ns from 'mod';
> 2 | export v from 'mod';
    |        ^
  3 | export a, * as b from 'mod';
  4 | export c, { foo } from 'mod';
  5 | export * as d from 'mod';
Cause: [2:7-2:8]: Unexpected token: 'identifier'"
`;

exports[`export.js format[oxc] 1`] = `
"Unexpected token (2:8)
  1 | export * as ns from 'mod';
> 2 | export v from 'mod';
    |        ^
  3 | export a, * as b from 'mod';
  4 | export c, { foo } from 'mod';
  5 | export * as d from 'mod';"
`;

exports[`export.js format[yuku] 1`] = `
"Expected declaration after 'export', but found 'v' (2:8)
  1 | export * as ns from 'mod';
> 2 | export v from 'mod';
    |        ^
  3 | export a, * as b from 'mod';
  4 | export c, { foo } from 'mod';
  5 | export * as d from 'mod';"
`;
